[package]
name = "leafrog"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
bevy = { version = "0.9", default-features = false, features = [
    "bevy_gilrs",
    "bevy_winit",
    "render",
    "png",
    "x11",
] }
iyes_loopless = { version = "0.9", features = ["states"] }
iyes_progress = { version = "0.7", features = ["iyes_loopless", "assets"] }
leafwing-input-manager = "0.7"
bevy-inspector-egui = "0.14"
bevy_tweening = "0.6"
# heron = { version = "3.0", features = ["2d"], path = "../bevy/heron" }
# heron_debug = { version = "3.1", features = ["2d"] }
bevy_rapier2d = "0.19"
bevy_kira_audio = "0.13"
fastrand = "1.7"
