[package]
name = "leafrog"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
bevy = { version = "0.9", default-features = false, features = [
    "bevy_audio",
    "bevy_gilrs",
    "bevy_winit",
    "render",
    "png",
    "vorbis",
    "x11",
] }
iyes_loopless = { version = "0.9", features = ["states"] }
iyes_progress = { version = "0.7", features = ["iyes_loopless", "assets"] }
leafwing-input-manager = "0.8"
bevy_egui = "0.19"
bevy-inspector-egui = "0.17"
bevy_tweening = "0.6"
# heron = { version = "3.0", features = ["2d"], path = "../bevy/heron" }
# heron_debug = { version = "3.1", features = ["2d"] }
bevy_rapier2d = "0.20"
fastrand = "1.7"
