[package]
name = "leafrog"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
bevy = { version = "0.10", default-features = false, features = [
    "bevy_audio",
    "bevy_gilrs",
    "bevy_winit",
    "bevy_render",
    "png",
    "vorbis",
    "x11",
] }
iyes_progress = { version = "0.8", features = ["assets"] }
leafwing-input-manager = "0.9"
bevy_egui = "0.20"
bevy-inspector-egui = "0.18"
bevy_tweening = "0.7"
bevy_rapier2d = "0.21"
fastrand = "1.7"
